<resources>
    <string name="app_name">Cherif</string>
    <string name="cherif">Cherif</string>
    <string name="name">Name</string>
    <string name="date">date</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="your_birth_date">Your birth date</string>
    <string name="oh_hey_let_s_start_with_an_intro">Oh hey!Let\'s start with an intro.</string>
    <string name="who_would_you_like_to_meet">Who would you like to meet?</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="nonbinary_people">Nonbinary people</string>
    <string name="profile">Profile</string>
    <string name="for_you">For You</string>
    <string name="liked_you">Liked You</string>
    <string name="chats">Chats</string>
</resources>